Fix stretching issues

--- a/sdk/toolstyle.css
+++ b/sdk/toolstyle.css
@@ -1,47 +1,3 @@
-#editor {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	background-color: purple;
-}
-
-#windows-bar {
-	background-color: rgb(20, 20, 20);
-	height: 25px;
-	flex-shrink: 0;
-}
-
-#main-stuff {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: row;
-	background-color: red;
-}
-
-#toolbar {
-	width: 50px;
-	height: 100%;
-	background-color: aqua;
-}
-
-#game-container {
-	image-rendering: pixelated;
-	background-color: green;
-	width: 100%;
-	height: 99%;
-}
-
-#game {
-	image-rendering: pixelated;
-	width: 100%;
-	height: 100%;
-}
-
 .center {
 	display: flex;
 	align-items: center;
